Removed p:has(>.katex) overflow rules b/c they stopped proper <p> wrapping around .float-right. Not sure why they were present --- document better in future. Will keep an eye out.

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -807,11 +807,6 @@ hr {
   display: none;
 }
 
-p:has(> .katex) {
-  overflow-x: auto;
-  overflow-y: hidden;
-}
-
 .katex-html:has(span.tag) {
   display: flex !important;
 }
